# privateMoneyManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  check_api.py  config.py  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
bot/: config.py
bot/handlers/: callbacks.py  commands.py  expense.py
bot/services/: ai_client.py  database.py
handlers/: callbacks.py  commands.py  expense.py
scripts/: check_api.py
services/: ai_client.py  database.py
