[project]
name = "private-money-manager"
version = "1.0.0"
description = "Telegram bot for personal expense tracking"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==21.9",
    "openai>=1.0.0",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
